# pygame-demos

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tic_tac_toe/: board_display.py  board_logic.py  constans.py  game_manager.py  header.py  main.py  player.py
