[tool.poetry]
name = "pygame-demos"
version = "0.1.0"
description = ""
authors = ["Marek Bleschke <marek.bleschke@gmail.com>"]
readme = "README.md"
packages = [{include = "pygame_demos"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
