[tool.poetry]
name = "pygame-demos"
version = "0.1.0"
description = ""
authors = ["Marek Bleschke <marek.bleschke@gmail.com>"]
readme = "README.md"
packages = [{include = "pygame_demos"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"


[tool.poetry.group.test.dependencies]
black = {extras = ["d"], version = "^23.1.0"}
mypy = "^1.1.1"
flake8 = "^6.0.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
